[package]
name = "adventofcode"
version = "0.1.0"
authors = ["Packy White <pwhite@lyft.com>"]
edition = "2018"
default-run = "adventofcode"

[[bin]]
name = "day1"
path = "bin/day1.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
failure = "0.1"
rayon = "1.2"
"line_intersection" = "0.4"
geo = "0.12.2"