[package]
name = "adventofcode"
version = "0.1.0"
authors = ["Packy White <pwhite@lyft.com>"]
edition = "2018"
default-run = "adventofcode"

[[bin]]
name = "day1"
path = "bin/day1.rs"

[[bin]]
name = "day2"
path = "bin/day2.rs"

[[bin]]
name = "day3"
path = "bin/day3.rs"

[[bin]]
name = "day5"
path = "bin/day5.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "*"
crossbeam = "0.7"
failure = "0.1"
geo = "0.12.2"
itertools = "0.8"
lazy_static = "1.4"
line_intersection = "0.4"
permutohedron = "0.2"
rayon = "1.2"